--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        <p>Hello World from my vebsite</p>
+        <p>Hello World from my vebsite!</p>
         <img src="Dog.jpg" alt="Dog">
     </body>
 </html>
